--- a/index.html
+++ b/index.html
@@ -25,23 +25,26 @@
 
       <div class="text-data">
         <span class="name">Aaron Barrichello</span>
-        <span class="job">Web Developer</span>
+        <span class="job">Informatics - Tel u</span>
       </div>
 
       <div class="media-buttons">
         <a
           href="https://www.instagram.com/aaronbarrichello/"
           style="background: #e1306c"
-          class="link"
-        >
+          class="link">
           <i class="bx bxl-instagram"></i>
         </a>
         <a
           href="https://www.linkedin.com/in/aaronbarrichello/"
           style="background: #0a66c2"
-          class="link"
-        >
+          class="link">
           <i class="bx bxl-linkedin"></i>
+        <a
+          href="https://www.github.com/aaronbarrichello"
+          style="background: #3d2d00"
+          class="link">
+          <i class="bx bxl-github"></i>
         </a>
       </div>
     </div>
