--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="text-data">
         <span class="name">Aaron Barrichello</span>
-        <span class="job">Informatics - Tel u</span>
+        <span class="job">Informatics - Tel U</span>
       </div>
 
       <div class="media-buttons">
