--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <i class="bx bxl-linkedin"></i>
         <a
           href="https://www.github.com/aaronbarrichello"
-          style="background: #3d2d00"
+          style="background: black"
           class="link">
           <i class="bx bxl-github"></i>
         </a>
